<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreenTheme"
        tools:context=".ui.activity.LoginActivity" android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

        <TextView
                android:text="@string/registrati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_text_registrati" android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="end" android:padding="15dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/login_img_logo"
                    android:contentDescription="@string/application_logo" android:elevation="4dp"
                    tools:srcCompat="@mipmap/ic_launcher" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    android:layout_marginBottom="40dp" app:srcCompat="@mipmap/ic_launcher"/>
            <ImageView
                    android:layout_width="342dp"
                    android:layout_height="591dp" app:srcCompat="@drawable/gradient_card" android:id="@+id/imageView"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="35dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="34dp" app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginBottom="24dp" android:contentDescription="@string/application_logo"/>
            <LinearLayout android:layout_width="294dp" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:id="@+id/linearLayout"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="@+id/imageView">

                <EditText android:layout_width="match_parent" android:layout_height="55dp"
                          android:background="@drawable/input_background"
                          android:id="@+id/login_input_email" android:inputType="textEmailAddress" android:autofillHints=""
                          tools:targetApi="o" android:textColor="@android:color/white" android:padding="10dp"/>
                <TextView
                        android:text="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white" android:labelFor="@id/login_input_email"/>

                <EditText android:layout_width="match_parent" android:layout_height="55dp"
                          android:background="@drawable/input_background" android:id="@+id/login_input_password"
                          android:layout_marginTop="20dp" android:inputType="textPassword" android:importantForAutofill="no"
                          android:textColor="@android:color/white" android:padding="10dp"/>
                <TextView
                        android:text="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white" android:labelFor="@id/login_input_password"/>
                <CheckBox
                        android:text="@string/ricordami"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/id_checkbox_ricordami"
                        android:textColor="@android:color/white" android:layout_marginTop="20dp"
                        android:layout_gravity="end"
                        android:buttonTint="@android:color/white" android:checked="true"/>
                <Button
                        android:text="@string/accedi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content" android:id="@+id/login_btn_accedi"
                        android:background="@drawable/button_background" android:textColor="@android:color/white"
                        android:textStyle="bold" android:layout_marginTop="30dp" android:layout_gravity="center"
                />
                <TextView
                        android:text="@string/hai_dimenticato_la_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center"
                        android:layout_marginTop="15dp"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</ScrollView>